# junbot_app

./: .gitignore  README.md
build-junbot_app-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  junbot_app  qrc_qml.cpp  rules.ninja
build-junbot_app-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-junbot_app-Desktop-Debug/junbot_app_autogen/: moc_predefs.h
build-junbot_app-Desktop-Debug/junbot_app_autogen/HFABCISP3Q/: moc_HomeScreen.cpp  moc_Screen_Def.cpp
build-junbot_app-Desktop-Debug/junbot_app_autogen/UEYSPHEQL3/: moc_AppModel.cpp
build-junbot_app-Desktop-Debug/junbot_app_autogen/WHCPTFCPIR/: moc_QMQTTHandler.cpp
build-junbot_app-Desktop-Debug/junbot_app_autogen/XRCR22Q67D/: moc_AppEnums.cpp  moc_Constants_Def.cpp
build-junbot_app-Desktop-Debug/junbot_app_autogen/XUT2MCXYTI/: moc_AppEngine.cpp
build-junbot_app-Desktop-Debug/kms-Dashboard_autogen/: mocs_compilation.cpp
build-junbot_app-Desktop-Debug/share/: qml.qrc  qml.qrc.depends
demo/: control_cmd.webm
junbot_app/: .xdp_CMakeLists.txt.17WXC2  .xdp_CMakeLists.txt.5LLWB2  .xdp_CMakeLists.txt.90H191  .xdp_CMakeLists.txt.DMX791  .xdp_CMakeLists.txt.IY58B2  .xdp_CMakeLists.txt.U7QT91  CMakeLists.txt  config.qrc  qml.qrc  res.qrc
junbot_app/hdr/: AppEngine.h
junbot_app/hdr/Comon/: AppEnums.h  Common.h  Constants_Def.h
junbot_app/hdr/Handler/: QMLHandler.h  QMQTTHandler.h  QmlMQTTClient.h
junbot_app/hdr/Model/: AppModel.h  RobotModel.h
junbot_app/hdr/View/: HomeScreen.h  Screen_Def.h
junbot_app/js/: func.js
junbot_app/qml/: LoginScene.qml  LoginScreen.qml  MainScene.qml  MainScreen.qml  main.qml
junbot_app/qml/Component/: ControllerButton.qml  Frame.qml  MenuBar.qml  MenuItem.qml  NodeButton.qml  TargetPlaceholder.qml  TargetPlaceholderList.qml
junbot_app/qml/Component/Common/: Frame.qml  MenuBar.qml  MenuItem.qml  QImage.qml  QText.qml
junbot_app/qml/Component/Controller/: NodeButton.qml  TargetPlaceholder.qml  TargetPlaceholderList.qml
junbot_app/qml/Component/Home/: ControllerButton.qml
junbot_app/qml/Component/Login/: LoginBackground.qml  LoginButton.qml  LoginInput.qml  LoginLogo.qml
junbot_app/qml/Screen/: ControlScreen.qml  ControlScreen_BACKUP_10877.qml  ControlScreen_BASE_10877.qml  ControlScreen_LOCAL_10877.qml  HomeScreen.qml  InfoScreen.qml  LoginScreen.qml  UserScreen.qml
junbot_app/qml/Screen/Control/: ControlScreen.qml
junbot_app/qml/Screen/Home/: HomeScreen.qml
junbot_app/qml/Screen/User/: UserScreen.qml
junbot_app/share/: qml.qrc
junbot_app/share/config/: broker.json  devices.json
junbot_app/share/qml/: LoginScreen.qml  MainScreen.qml  main.qml
junbot_app/share/qml/Component/: QMenuBar.qml  QMenuButton.qml
junbot_app/share/qml/Screen/Control/: ControlScreen.qml
junbot_app/share/qml/Screen/Home/: HomeScreen.qml
junbot_app/share/qml/Screen/User/: UserScreen.qml
junbot_app/src/: AppEngine.cpp  main.cpp
junbot_app/src/Comon/: Common.cpp
junbot_app/src/Handler/: QMLHandler.cpp  QQMTTHandler.cpp  QmlMQTTClient.cpp
junbot_app/src/Model/: AppModel.cpp  RobotModel.cpp
junbot_app/src/View/: HomeScreen.cpp
junbot_app/src/common/: Common.cpp
tools/: publishing.py
(+405 files in other folders)
